# hiraco

./: .gitignore  CMakeLists.txt  LICENSE  README.md  algorithm.md  pyproject.toml
.github/agents/: computer-vision-expert.agent.md  optimization-expert.agent.md  ux-expert.agent.md
native/: CMakeLists.txt
native/src/: dng_sdk_bridge.cpp  dng_sdk_bridge.h  dng_writer_bridge.cpp  dng_writer_bridge.h  main.cpp
scripts/: compare_sheet.py  tuning_sheet.py
src/: dng_jxl_stubs.cpp  dng_sdk_bridge.cpp  dng_sdk_bridge.h  dng_writer_bridge.cpp  dng_writer_bridge.h  hiraco_core.cpp  hiraco_core.h  hiraco_gui.cpp  hiraco_timing.h  hiraco_types.h  main.cpp  stack_guidance.cpp  stack_guidance.h  vendor_makernote.cpp  vendor_makernote.h
src/halide/: guided_filter_generator.cpp  wavelet_generator.cpp
src/hiraco/: __main__.py  cli.py  config.py  freshness.py  metadata.py  metadata_copy.py  native_build.py  native_contract.py  native_helper.py  native_probe.py
tests/: hiraco_core_tests.cpp
